# shared-models

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/generic_models/: app_error.py  generic_pagination.py  generic_response.py
src/sverse_generic_models/: generic_pagination.py
src/userverse/company/: company.py  roles.py  user.py
src/userverse/user/: password.py  user.py
src/userverse_models/company/: address.py  company.py  roles.py  user.py
src/userverse_models/user/: password.py  user.py
src/userverse_models/validators/: __init__.py  phone_number.py
src/validators/: phone_number.py
tests/: ReadMe.md  test_userverse_models.py
tests/generic_models/: ReadMe.md  test_generic_models.py
tests/userverse_models/: ReadMe.md  test_company.py  test_roles.py  test_user.py  test_userverse_models.py
tests/validators/: ReadMe.md  test_phone_number.py
